src/objects/Funnel_Tracker_Snapshot__c.object
<CustomObject>
    <description>Reporting Snapshot object that stores Opportunity with Opportunity Product for DW Trackers</description>
    <fields>
        <fullName>Account_Id__c</fullName>
        <label>Account Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BL__c</fullName>
        <label>BL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BU__c</fullName>
        <label>BU</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloseDate__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Component_Multiplier__c</fullName>
        <label>Component Multiplier</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Day_of_the_Week__c</fullName>
        <formula>CASE(
    MOD(DATEVALUE(CreatedDate)-DATE(1900,1,6),7), 
    1, &apos;Sunday&apos;, 
    2, &apos;Monday&apos;, 
    3, &apos;Tuesday&apos;, 
    4, &apos;Wednesday&apos;, 
    5, &apos;Thursday&apos;, 
    6, &apos;Friday&apos;, 
    0, &apos;Saturday&apos;, 
    &apos;&apos;
)</formula>
        <label>Day of the Week</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MAG__c</fullName>
        <label>MAG</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opp_Design_Win_Claim_Value_USD__c</fullName>
        <label>Opp. Design Win Claim Value (USD)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OpportunityLineItemId__c</fullName>
        <label>Opportunity Product Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Id__c</fullName>
        <label>Opportunity Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <label>Opportunity Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oppty_Claim_Value_USD__c</fullName>
        <label>Oppty Claim Value (USD)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_Account_Id_Full__c</fullName>
        <formula>IF (LEN(Parent_Account_Id__c)=18, Parent_Account_Id__c, CASESAFEID( Parent_Account_Id__c ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Account Id Full</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Account_Id__c</fullName>
        <description>Used to store Parent Account of the Opportunity respective to the OpportunityLineItem # SIR960</description>
        <label>Parent Account Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Account_Name__c</fullName>
        <description>Used to store Parent Account of the Opportunity respective to the OpportunityLineItem # SIR960</description>
        <label>Parent Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Percentage_to_DW_Completion__c</fullName>
        <label>DW Completion</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Prod_Claim_Value_USD__c</fullName>
        <label>Prod Claim Value (USD)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prod_Lost__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prod Lost</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Design_Win_Claim_Value_USD1__c</fullName>
        <label>Product Design Win Claim Value (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Thrust_DW_Value__c</fullName>
        <label>Product Thrust DW Value (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Thrust_Non_Thrust_DW_Value_USD__c</fullName>
        <label>Product Thrust+Non Thrust DW Value(USD)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Production_Date__c</fullName>
        <label>Production Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Products_Id__c</fullName>
        <label>Product Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity_c__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StageName__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Initial Engagement</fullName>
                    <color>#FF0000</color>
                    <label>Initial Engagement</label>
                </value>
                <value>
                    <fullName>Discovery</fullName>
                    <color>#FF9900</color>
                    <label>Discovery</label>
                </value>
                <value>
                    <fullName>Assessment</fullName>
                    <color>#FFFF66</color>
                    <label>Assessment</label>
                </value>
                <value>
                    <fullName>Recommendation</fullName>
                    <color>#A845DC</color>
                    <label>Recommendation</label>
                </value>
                <value>
                    <fullName>Decision</fullName>
                    <color>#0B24BE</color>
                    <label>Decision</label>
                </value>
                <value>
                    <fullName>Commitment</fullName>
                    <color>#33CC00</color>
                    <label>Commitment</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Thrust_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Thrust Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UnitPrice__c</fullName>
        <label>Sales Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X9NC__c</fullName>
        <label>9NC</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <label>Funnel Tracker Snapshot</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CREATED_DATE</columns>
        <columns>Day_of_the_Week__c</columns>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Opportunity_Name__c</columns>
        <columns>StageName__c</columns>
        <columns>X9NC__c</columns>
        <columns>BU__c</columns>
        <columns>BL__c</columns>
        <columns>MAG__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FTS{0000000000}</displayFormat>
        <label>Funnel Tracker Snapshot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Funnel Tracker Snapshots</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>